[project]
name = "model-f"
version = "0.1.0"
description = "Easily create Pydantic models from functions. ðŸµ"
authors = [
    {name = "A-4S",email = "dev.forsythe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
rich = "^13.9.4"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
